@@ -1,3 +1,7 @@
+2008-06-19  Laurent Debacker <debackerl@gmail.com> 
+
+	* QuickAccessToolbar.cs: Implement size request and size allocation.
+
 2008-06-06  Laurent Debacker <debackerl@gmail.com> 
 
 	* Theme.cs: Stub for the application button.
